--- a/src/app/project-detail.component.html
+++ b/src/app/project-detail.component.html
@@ -1,26 +1,33 @@
 <div *ngIf="project">
 	<div class="project">
-		<h3>{{project.name}}</h3>
-		<div>{{project.description}}</div>
 
-		<h4>Reports</h4>
-		<!--<div class="mdl-grid demo-content">
-          	<div class="demo-charts mdl-color--white mdl-cell mdl-cell--12-col mdl-grid">
-          		<donut-chart></donut-chart>
-				<!--
-				<svg fill="currentColor" width="250px" height="250px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-		          <use xlink:href="#piechart" mask="url(#piemask)"></use>
-		          <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan font-size="0.2" dy="-0.07">%</tspan></text>
-		        </svg>
-		        -->
-	     <!--   </div>
-        </div>-->
+		<div *ngIf="editableProjectName; else fixedProjectName">
+			<focussed-input [value]="project.name" [label]="'Project Name'" classes="editableTitle" (onEntered)="updateProjectName($event)"></focussed-input>
+		</div>
+		<ng-template #fixedProjectName>
+			<div>
+				<h3 (click)="editProjectName()">
+					{{project.name}}
+					<i class="material-icons edit-mode">mode edit</i>
+				</h3>
+			</div>
+		</ng-template>
 
-        <donut-chart [percentage]="100"></donut-chart>
+		<div *ngIf="editableProjectDescription; else fixedProjectDescription">
+			<focussed-input [value]="project.description" label="Project description" (onEntered)="updateProjectDescription($event)"></focussed-input>
+		</div>
+		<ng-template #fixedProjectDescription>
+			<div (click)="editProjectDescription()">
+				<label >{{project.description}}</label>
+				<i class="material-icons edit-mode">mode edit</i>
+			</div>
+		</ng-template>
+
+		<donut-chart [percentage]="100"></donut-chart>
 
         <h4>Requirements</h4>
 		<div *ngIf="requirements && requirements.length > 0; else noRequirementsBlock">
-			<div *ngFor="let requirement of requirements">
+			<div *ngFor="let requirement of requirements; let i = index">
 				<div mdl class="test-step mdl-shadow--2dp">
 
 					<div class="mdl-grid">
@@ -28,9 +35,9 @@
 							<a [routerLink]="['requirements', requirement.id]">{{requirement.name}}</a>
 						</div>
 						<div class="mdl-cell mdl-cell--2-col test-step-buttons">
-							<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored mdl-js-ripple-effect" (click)="addRequirement(i)">
+							<!--<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored mdl-js-ripple-effect" (click)="addRequirement(i)">
 								<i class="material-icons">add</i>
-							</button>
+							</button>-->
 
 							<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored mdl-js-ripple-effect" (click)="deleteRequirement(i)">
 								<i class="material-icons">delete</i>
@@ -42,29 +49,9 @@
 				</div>
 			</div>
 		</div>
-		<ng-template #noRequirementsBlock>
-			<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" (click)="addRequirement(-1)">
-			  Add requirement
-			</button>
-		</ng-template>
+		
+		<button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" (click)="addRequirement()">
+		  Add requirement
+		</button>
 	</div>
 </div>
-
-<!--<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="position: fixed; left: 1000px; height: -1000px;">
-	<defs>
-	
-	  <!--<mask id="piemask" maskContentUnits="objectBoundingBox">
-	    <circle cx=0.5 cy=0.5 r=0.49 fill="white" />
-	    <circle cx=0.5 cy=0.5 r=0.40 fill="black" />
-	  </mask>-->
-	  
-	  <!--<g id="piechart">
-	    <circle cx=0.5 cy=0.5 r=0.5 />
-	    <path d="M 0.5 0.5 0.5 0 A 0.5 0.5 0 0 1 0.95 0.28 z" stroke="none" fill="rgba(255, 255, 255, 0.75)" />
-	    <!--<path d="M0 0 v-125 A125 125 1 1 1 -125 0 z" stroke="none" fill="#0088cc" transform="translate(125, 125) scale(.84)"/>-->
-	    <!--<path d="M 0.5 0.5 A 0.5 0.5 0 0 1 0.95 0.28 z" stroke="none" fill="rgba(255, 255, 255, 0.75)" />
-	    <path d="M 0.5 0 A 0.5 0.5 0 0 1 0.95 0.28 z" stroke="none" fill="rgba(255, 255, 255, 0.75)" />-->
-<!--
-	  </g>
-	</defs>
-</svg>-->
